--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Build with mkdocs
-        run: mkdocs build --strict
+        run: mkdocs build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
