--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ site_description: Documentation for the Galasa hybrid software test runner and r
 repo_name: galasa-mkdocs
 repo_url: https://github.com/jt-nti/galasa-mkdocs
 docs_dir: docs
+extra_css:
+  - assets/stylesheets/extra.css
 theme:
   custom_dir: docs/overrides
   name: material
@@ -87,6 +89,8 @@ plugins:
 extra:
   version:
     provider: mike
+not_in_nav: |
+  /home/
 nav:
   - index.md
   - About:
